--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ var/
 
 # Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
+pip-delete-this-directory.txtK
 
 # Unit test / coverage reports
 htmlcov/
