--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+.idea/
 build/
 develop-eggs/
 dist/
@@ -23,7 +24,6 @@ var/
 *.egg-info/K
 .installed.cfg
 *.egg
-.idea**
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
