--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py27, py33, py34, py35
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/flask_microbrewrey
+    PYTHONPATH = {toxinidir}:{toxinidir}/flask_microbrewery
 commands = python setup.py test
 
 ; If you want to make tox run the tests with the same versions, create a
